--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,8 +15,8 @@ services:
       context: .
       dockerfile: frontend/Dockerfile
     environment:
-      VITE_API_URL: http://localhost:8000/api/v1
-      VITE_AUTH_URL: http://localhost:8000
+      VITE_API_URL: ${VITE_API_URL:-http://localhost:8000/api/v1}
+      VITE_AUTH_URL: ${VITE_AUTH_URL:-http://localhost:8000}
     ports:
       - "3000:3000"
     depends_on:
